@@ -11,3 +11,8 @@ Permission functionality:
 Installation File Management functionality
 ------------------------------------------
 
+SuperGroups
+-----------
+1) Partitioning of NS_IMAGE namespace i.e. since the the problem is about files in the filesystem,
+   it comes down to partitioning the filesystem space for this namespace
+   
